-----------------------------------------

In the enrolments_matrix, have now enabled editing the capacity to
allow it to change between years. This is stored in the 'AC' community
for that enrolyear and yeargroup. Still make sure that the year-end
scripts carry the new capacity across to the year community.

Existing orders can now be amended, at least until they have been
authorised.


Version ClaSS-0.8.41 release (2008/03/17)
-----------------------------------------

Bug fix to list_sid_responsibles() - form tutors are now being sent
emails!

Brought the section table into play to represent large organisational
sections of a school. A section is really a grouping of yeargroups
and/or courses. It can have a group for permissions and an address. By
default the installation creates a "Whole School" section with secid=1
which you may want to re-name.

The new_budget script now requires a budget to belong to a section.

The categorydef table has a new type='bud' for enabling budgets which
are not tied to curriculum subjects like 'Stationary' etc.

The groups table has been given a type field to make the different
sorts of groups explicit. This also allows for groups with functions
beyond academic and pastoral to be incorporated. So, currently
a=academic (was implicitly crid and bid with yid NULL), p=pastoral (was
implicitly yid) and b=budget (uses nothing else).

Used the $CFG->clientid variable as a per school distinguisher when
generating the eportfolio accounts. This gets prepended to staff
usernames, all pastoral communities, and to teaching class
communities.

The order book can now navigate by budget year, and the value is
maintained between pages. Orders can now be searched by status.

Bugfix to the order of columns in the Report attendance.

The eportfolio now uses the epfusername during the remote login and
NOT tid; the two can be different when multiple class installations
share the same elgg installation. The school's clientid is appended to